# image_processor

projects/image_processor/: CMakeLists.txt  app.cpp  app.h  base_filter.cpp  base_filter.h  bit_map.cpp  bit_map.h  cmd_parser.cpp  cmd_parser.h  filter_factories.cpp  filter_factories.h  filter_pipeline_factory.cpp  filter_pipeline_factory.h  ip_exception.cpp  ip_exception.h  main.cpp  readme.md  test.cpp  utils.cpp  utils.h
